# ai-communication-app

./: .dockerignore  Dockerfile  README.md  SETUP_JP.md  docker-compose.yml  main.py  pyproject.toml  pytest.ini  simple_test.py  voice_app.py
backend/: __init__.py  main.py
docker/: Dockerfile.backend  Dockerfile.dev  Dockerfile.frontend  Dockerfile.llm  Dockerfile.tts  Dockerfile.whisper  start-llm.sh
frontend/: next.config.ts  package-lock.json  package.json  test-api.html
frontend/app/: globals.css  layout.tsx  page.tsx
requirements/: backend.txt  llm.txt  tts.txt  whisper.txt
services/llm/: main.py
services/tts/: main.py
services/whisper/: main.py
src/ai_communication_app/: __init__.py  audio_io.py  llm_client.py  s2s_engine.py  ui.py
tests/: __init__.py  test_audio_io.py  test_llm_client.py  test_s2s_engine.py
