[tool.poetry]
name = "ai-communication-app"
version = "0.1.0"
description = "AI English conversation app using SeamlessM4T v2 Speech-to-Speech"
authors = ["Your Name <your.email@example.com>"]
readme = "README.md"
packages = [{include = "ai_communication_app", from = "src"}]

[tool.poetry.dependencies]
python = ">=3.11,<3.14"
# WebSocket & API Framework
fastapi = "^0.111.0"
uvicorn = {extras = ["standard"], version = "^0.25.0"}
websockets = "^12.0"
python-multipart = "^0.0.20"

# 音声処理 - リアルタイムストリーミング
faster-whisper = "^0.10.0"
TTS = "^0.22.0"
torch = "^2.0.0"
torchaudio = "^2.0.0"
numpy = "^1.24.0"
soundfile = "^0.12.1"
webrtcvad = "^2.0.10"

# Redis ストリーム
redis = "^5.0.1"
aioredis = "^2.0.1"

# LLM API
requests = "^2.31.0"
httpx = "^0.25.0"

# ログ・モニタリング
loguru = "^0.7.0"
prometheus-client = "^0.19.0"

# 音声フォーマット処理
pydub = "^0.25.1"

# 開発・テスト用（削除予定）
streamlit = {version = "^1.35.0", optional = true}
speechrecognition = {version = "^3.14.3", optional = true}
pyttsx3 = {version = "^2.99", optional = true}

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
pytest-asyncio = "^0.21.0"
black = "^23.7.0"
isort = "^5.12.0"
flake8 = "^6.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ['py311']

[tool.isort]
profile = "black"
line_length = 88

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
asyncio_mode = "auto"